# r5os

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  r5os.elf  start_ymodem.py
docs/: conf.py  debugging.rst  index.rst  platform_specific.rst
scripts/: start_ymodem.py
src/: boot.s  cpu.h  debug.c  debug.h  entry.c  linker.ld  main.c
src/arch/riscv64/: arch.cmake  boot.s  cpu.c  debug.c  linker.ld  riscv64.cmake
